# claude-data-mcp

./: .env.example  .gitignore  README.md  marketplace.json  pyproject.toml  server.py
.github/workflows/: ci.yml  release.yml
src/: app.py  config.py
src/engine/: duckdb.py
src/providers/: azure.py  databricks.py  s3.py
src/tools/: tools.py
tests/: conftest.py  test_config.py  test_tools.py
