[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-data-mcp"
version = "1.0.0"
description = "Query Azure Storage, AWS S3, and Databricks from Claude using natural language. Powered by DuckDB."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "duckdb>=1.1",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Azure
    "azure-storage-blob>=12.19",
    "azure-data-tables>=12.4",
    "azure-identity>=1.15",
    # AWS
    "boto3>=1.34",
    # Databricks
    "databricks-sdk>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[project.scripts]
cloud-data-mcp = "src.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff (lint + format) ──────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
